--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ notifications:
   slack: foxytrixy:HZwjgEulu0umNtMJ1E9UhGPA#henrique
 
 before_install:
-- mkdir -p henrique/env-travis/google/api
+- mkdir -p henrique/env/google/api
 - openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
   -in henrique/env-travis/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
   -d
