--- a/scripts/deploy/uwsgi/henrique.tmplt.service
+++ b/scripts/deploy/uwsgi/henrique.tmplt.service
@@ -8,7 +8,8 @@ Group=www-data
 
 WorkingDirectory={{REPO_DIR}}
 Environment="PATH={{VENV_DIR}}/bin"
-ExecStart={{VENV_DIR}}/bin/newrelic-admin run-program {{VENV_DIR}}/bin/uwsgi --ini {{PROJECT_INI}}
+# ExecStart={{VENV_DIR}}/bin/newrelic-admin run-program {{VENV_DIR}}/bin/uwsgi --ini {{PROJECT_INI}}
+ExecStart={{VENV_DIR}}/bin/uwsgi --ini {{PROJECT_INI}}
 
 [Install]
 WantedBy=multi-user.target
