--- a/scripts/deploy/docker/Dockerfile
+++ b/scripts/deploy/docker/Dockerfile
@@ -1,44 +1,44 @@
 FROM python:3.7
-MAINTAINER kycho kycho@lbox.kr
+MAINTAINER foxytrixy foxytrixy.bot@gmail.com
 
 ARG ENV
 
-# Environments 설정
-ENV PATH /usr/local/bin:$PATH
-ENV LANG C.UTF-8
-ENV FLASK_APP delphi.app.main.run
-ENV FLASK_ENV development
+#ENV PATH /usr/local/bin:$PATH
+#ENV LANG C.UTF-8
+#ENV FLASK_APP henrique.main.run:app
+#ENV FLASK_ENV development
 
-# apt-get으로 nginx, supervisor 설치
 RUN apt-get -y update
 RUN apt-get -y dist-upgrade
-RUN apt-get -y install build-essential libssl-dev libffi-dev nginx supervisor python3.7-dev libpoppler-cpp-dev pkg-config
+RUN apt-get -y install build-essential libssl-dev libffi-dev nginx supervisor python3.6-dev
+#RUN apt-get -y install libpoppler-cpp-dev pkg-config
 
-COPY . /delphi
-WORKDIR /delphi
-
-RUN pip install --upgrade pip
-RUN pip install -r delphi/requirements.txt
+RUN pip install -U pip python3-setuptools
+RUN pip install -r henrique/requirements.txt
 RUN pip install -r scripts/deploy/requirements.server.txt
 
-# delphi.ini(uwsgi config) jinja로 생성
-RUN /delphi/scripts/deploy/uwsgi/run.bash
+RUN scripts/deploy/uwsgi/compile.bash
+RUN scripts/deploy/nginx/compile.bash
+RUN touch /var/log/supervisor/supervisord.log
 
-# delphi(nginx config) jinja로 생성
-RUN /delphi/scripts/deploy/nginx/run.bash
+COPY . /henrique
+# WORKDIR /henrique
 
-# nginx 설정 파일 복사 및 링크
-RUN cp -f /delphi/scripts/deploy/nginx/delphi /etc/nginx/sites-available/
-RUN rm -f /etc/nginx/sites-enabled/*
-RUN ln -sf /etc/nginx/sites-available/delphi /etc/nginx/sites-enabled/
 
-# supervisor 설정 파일 복사
-RUN cp -f /delphi/scripts/deploy/supervisor/super_uwsgi.conf /etc/supervisor/conf.d/
 
-# http port
+#RUN cp -f /henrique/scripts/deploy/nginx/henrique /etc/nginx/sites-available/
+#RUN rm -f /etc/nginx/sites-enabled/*
+#RUN ln -sf /etc/nginx/sites-available/henrique /etc/nginx/sites-enabled/
+
+#RUN cp -f /henrique/scripts/deploy/supervisor/super_uwsgi.conf /etc/supervisor/conf.d/
+
 EXPOSE 80
-# https port
 EXPOSE 443
 
-# pkill nginx후 supervisord -n 실행
-CMD nginx; supervisord -n
+# CMD nginx; supervisord -n -c /henrique/scripts/deploy/supervisor/supervisord.conf
+
+# enter
+WORKDIR ${HOME}
+ENTRYPOINT ["/henrique/scripts/deploy/docker/docker-entrypoint.sh"]
+CMD ["supervisord", "-n", "-c", "/henrique/scripts/deploy/docker/supervisor/supervisord.conf"]
+#CMD ["supervisord"]
