--- a/scripts/deploy/docker/supervisor/supervisord.conf
+++ b/scripts/deploy/docker/supervisor/supervisord.conf
@@ -21,14 +21,14 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///run/supervisor.sock
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;" -c /henrique/scripts/deploy/nginx/henrique
+command=/usr/sbin/nginx -g "daemon off;" -c /henrique/scripts/deploy/nginx/henrique.nginx.conf
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:uwsgi]
-command=/usr/local/bin/uwsgi --ini /henrique/scripts/deploy/uwsgi/henrique.ini
+command=/usr/local/bin/uwsgi --ini /henrique/scripts/deploy/uwsgi/henrique.uwsgi.ini
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
