--- a/scripts/deploy/docker/Dockerfile
+++ b/scripts/deploy/docker/Dockerfile
@@ -10,7 +10,7 @@ ARG ENV
 
 RUN apt-get -y update
 RUN apt-get -y dist-upgrade
-RUN apt-get -y install build-essential libssl-dev libffi-dev nginx supervisor python3.6-dev
+RUN apt-get -y install build-essential libssl-dev libffi-dev nginx supervisor python3.6-dev python3-pip
 #RUN apt-get -y install libpoppler-cpp-dev pkg-config
 
 #COPY ./henrique/requirements.txt /henrique/henrique/requirements.txt
