--- a/scripts/deploy/docker/Dockerfile
+++ b/scripts/deploy/docker/Dockerfile
@@ -8,31 +8,58 @@ ARG ENV
 #ENV FLASK_APP henrique.main.run:app
 #ENV FLASK_ENV development
 
+###################
+# aptitude
+###################
 RUN apt-get -y update
 RUN apt-get -y dist-upgrade
-RUN apt-get -y install build-essential libssl-dev libffi-dev nginx supervisor
+RUN apt-get -y install build-essential libssl-dev libffi-dev nginx supervisor git
 RUN apt-get -y install python3.6 python3-pip
 #RUN apt-get -y install libpoppler-cpp-dev pkg-config
 
-COPY ./henrique/requirements.txt /app/henrique/requirements.txt
-COPY ./henrique/scripts/deploy/requirements.server.txt /app/henrique/requirements.txt
+###################
+# pip
+###################
 RUN pip3 install --index-url https://pypi.python.org/simple/ --upgrade pip==20.0.2
 #RUN pip3 install -U pip==20.0.2
 RUN pip3 install -U setuptools==46.1.3
 RUN pip3 install -U wheel==0.34.2
+
+COPY ./henrique/requirements.txt /app/henrique/requirements.txt
 RUN pip3 install -r /app/henrique/requirements.txt
+
+COPY ./scripts/deploy/requirements.server.txt /app/scripts/deploy/requirements.server.txt
 RUN pip3 install -r /app/scripts/deploy/requirements.server.txt
 
-COPY ./scripts/deploy/uwsgi/compile.bash /app/scripts/deploy/uwsgi/compile.bash
-COPY ./scripts/deploy/nginx/compile.bash /app/scripts/deploy/nginx/compile.bash
-RUN scripts/deploy/uwsgi/compile.bash
-RUN scripts/deploy/nginx/compile.bash
+
+###################
+# uwsgi / nginx
+###################
+#COPY ./scripts/deploy/uwsgi /app/scripts/deploy/uwsgi
+#RUN /app/scripts/deploy/uwsgi/compile.bash
+
+#COPY ./scripts/deploy/nginx /app/scripts/deploy/nginx
+#RUN /app/scripts/deploy/nginx/compile.bash
+
+EXPOSE 80
+EXPOSE 443
+
+#RUN mkdir -p /var/log /run/pid && \
+#    chmod -R 777 /var/log /run /run /run/pid && \
+#    chgrp -R 0 /var/log /run /run /run/pid && \
+#    chmod -R g+rwX /var/log /run /run /run/pid
+
+#    rm /etc/nginx/conf.d/default.conf
+
+#RUN mkdir -p /app/run/pid
+#RUN mkdir -p /app/log/supervisor
+#RUN touch /app/log/supervisor/supervisord.log
+
+RUN mkdir -p /run/pid
+RUN mkdir -p /var/log/supervisor
 RUN touch /var/log/supervisor/supervisord.log
-
-COPY . /app
-# WORKDIR /app
-
-
+#RUN touch /run/pid/supervisord.pid
+#RUN touch /run/supervisor.sock
 
 #RUN cp -f /app/scripts/deploy/nginx/app /etc/nginx/sites-available/
 #RUN rm -f /etc/nginx/sites-enabled/*
@@ -40,13 +67,9 @@ COPY . /app
 
 #RUN cp -f /app/scripts/deploy/supervisor/super_uwsgi.conf /etc/supervisor/conf.d/
 
-EXPOSE 80
-EXPOSE 443
-
-# CMD nginx; supervisord -n -c /app/scripts/deploy/supervisor/supervisord.conf
-
 # enter
-WORKDIR ${HOME}
-ENTRYPOINT ["/app/scripts/deploy/docker/docker-entrypoint.sh"]
+#WORKDIR ${HOME}
+COPY . /app
+ENTRYPOINT ["/app/scripts/deploy/docker/docker-entrypoint.bash"]
 CMD ["supervisord", "-n", "-c", "/app/scripts/deploy/docker/supervisor/supervisord.conf"]
 #CMD nginx; supervisord -n
