--- a/scripts/deploy/docker/supervisor/supervisord.conf
+++ b/scripts/deploy/docker/supervisor/supervisord.conf
@@ -1,6 +1,6 @@
 # [program:uwsgi]
-# command = newrelic-admin run-program uwsgi --ini /henrique/scripts/deploy/uwsgi/henrique.ini
-# command = uwsgi --ini /henrique/scripts/deploy/uwsgi/henrique.ini
+# command = newrelic-admin run-program uwsgi --ini /app/scripts/deploy/uwsgi/henrique.ini
+# command = uwsgi --ini /app/scripts/deploy/uwsgi/henrique.ini
 
 [unix_http_server]
 file=/run/supervisor.sock
@@ -21,14 +21,14 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///run/supervisor.sock
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;" -c /henrique/scripts/deploy/nginx/henrique.nginx.conf
+command=/usr/sbin/nginx -g "daemon off;" -c /app/scripts/deploy/nginx/henrique.nginx.docker.conf
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:uwsgi]
-command=/usr/local/bin/uwsgi --ini /henrique/scripts/deploy/uwsgi/henrique.uwsgi.ini
+command=/usr/local/bin/uwsgi --ini /app/scripts/deploy/uwsgi/henrique.uwsgi.docker.ini
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
