--- a/scripts/deploy/docker/supervisor/supervisord.conf
+++ b/scripts/deploy/docker/supervisor/supervisord.conf
@@ -24,7 +24,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:uwsgi]
-command=/usr/local/bin/uwsgi --ini /app/scripts/deploy/uwsgi/henrique.uwsgi.docker.ini
+command=/usr/local/bin/uwsgi --ini /app/scripts/deploy/uwsgi/henrique.uwsgi.docker.ini --uid "www-data" --gid "www-data"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
