--- a/scripts/deploy/docker/supervisor/supervisord.conf
+++ b/scripts/deploy/docker/supervisor/supervisord.conf
@@ -30,9 +30,8 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
-
 [program:discord.py]
-command=python -m khala.singleton.messenger.discord.external.client.discord_client
+command=python3 -m khala.singleton.messenger.discord.external.client.discord_client
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
