--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,25 @@
+sudo: required
+services:
+- docker
+
 language: python
 
 python:
 - '3.6.9'
 
+before_install:
+- mkdir -p henrique/env/google/api
+- openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
+  -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
+  -d
+- docker --version
+- docker-compose --version
+
 install:
 - pip install -U -r henrique/requirements.txt
+
+before_script:
+- ENV=prod scripts/deploy/docker/build.bash
 
 script:
 - pytest
@@ -12,10 +27,6 @@ script:
 notifications:
   slack: foxytrixy:HZwjgEulu0umNtMJ1E9UhGPA#henrique
 
-before_install:
-- mkdir -p henrique/env/google/api
-- openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
-  -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
-  -d
+
 
 # travis encrypt-file henrique/env/google/api/henrique-272420-c09c9b3e31ff.json  travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc --com --add
