--- a/henrique/main/singleton/deploy/henrique.nginx.local.conf
+++ b/henrique/main/singleton/deploy/henrique.nginx.local.conf
@@ -1,9 +1,5 @@
 # user  nobody;
-{% if mode == "local" %}
 user moon staff;
-{% elif mode == "docker" %}
-user www-data www-data;
-{% endif %}
 worker_processes  1;
 # daemon off;
 
@@ -20,7 +16,7 @@ events {
 
 
 http {
-    include       {{NGINX_DIR}}/mime.types;
+    include       /usr/local/etc/nginx/mime.types;
     default_type  application/octet-stream;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
@@ -38,51 +34,21 @@ http {
     #gzip  on;
 
     upstream henrique_upstream {
-        {% if mode == "local" %}
         server unix:{{REPO_DIR}}/scripts/deploy/uwsgi/henrique.uwsgi.sock; # for a file socket
-        {% elif mode == "docker" %}
-        server unix:/run/uwsgi.sock; # for a file socket
-        {% endif %}
         #server 127.0.0.1:8001; # for a web port socket (use this to test with http instead of socket)
     }
 
-    {% if not is_https %}
+    
 
     server {
         listen 80;
         listen [::]:80;
-        server_name {{DOMAIN_NAME}} www.{{DOMAIN_NAME}};
+        server_name localhost www.localhost;
         location / {
-            include {{NGINX_DIR}}/uwsgi_params;
+            include /usr/local/etc/nginx/uwsgi_params;
             uwsgi_pass henrique_upstream;
             }
     }
 
-    {% else %}
-
-    server {
-        listen 80;
-        listen [::]:80;
-        server_name {{DOMAIN_NAME}} www.{{DOMAIN_NAME}};
-        return 302 https://$server_name$request_uri;
-    }
-
-    server {
-
-        # SSL configuration
-
-        listen 443 ssl http2;
-        listen [::]:443 ssl http2;
-        ssl        on;
-        ssl_certificate         {{FILEPATH_SSL_CERTI}};
-        ssl_certificate_key     {{FILEPATH_SSL_PRIVATE_KEY}};
-
-        server_name {{DOMAIN_NAME}} www.{{DOMAIN_NAME}};
-
-        location / {
-            include uwsgi_params;
-            uwsgi_pass henrique;
-        }
-    }
-    {% endif %}
+    
 }
