--- a/henrique/main/singleton/deploy/supervisord/conf/supervisord.conf
+++ b/henrique/main/singleton/deploy/supervisord/conf/supervisord.conf
@@ -17,14 +17,14 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///run/supervisor.sock
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;" -c /app/scripts/deploy/nginx/henrique.nginx.docker.conf
+command=/usr/sbin/nginx -g "daemon off;" -c /app/scripts/deploy/nginx/henrique.nginx.{{env}}.conf
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:uwsgi]
-command=/usr/local/bin/uwsgi --ini /app/scripts/deploy/uwsgi/henrique.uwsgi.docker.ini --uid "www-data" --gid "www-data"
+command=/usr/local/bin/uwsgi --ini /app/scripts/deploy/uwsgi/henrique.uwsgi.nginx.ini --uid "www-data" --gid "www-data"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
