success pytest from docker locally

--- a/henrique/main/singleton/deploy/supervisord/conf/henrique.supervisord.dev.conf
+++ b/henrique/main/singleton/deploy/supervisord/conf/henrique.supervisord.dev.conf
@@ -17,14 +17,14 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///run/supervisor.sock
 
 [program:nginx]
-command=/usr/sbin/nginx -g "daemon off;" -c /app/scripts/deploy/nginx/henrique.nginx.{{env}}.conf
+command=/usr/sbin/nginx -g "daemon off;" -c /app/henrique/main/singleton/deploy/nginx/conf/henrique.nginx.dev.conf
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:uwsgi]
-command=/usr/local/bin/uwsgi --ini /app/scripts/deploy/uwsgi/henrique.uwsgi.nginx.ini --uid "www-data" --gid "www-data"
+command=/usr/local/bin/uwsgi --ini /app/henrique/main/singleton/deploy/uwsgi/ini/henrique.uwsgi.nginx.ini --uid "www-data" --gid "www-data"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
