--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,25 @@ language: python
 python:
 - '3.6.9'
 
-install:
-- pip install -U -r henrique/requirements.txt
+services:
+  - docker
+
+before_install:
+- scripts/deploy/compile-all.bash
+- scripts/deploy/docker/build.bash
+
+#install:
+#- pip install -U -r henrique/requirements.txt
 
 script:
-- pytest
+- openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
+  -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
+  -d
+- ENV=dev scripts/deploy/docker/test.bash
 
 notifications:
   slack: foxytrixy:HZwjgEulu0umNtMJ1E9UhGPA#henrique
 
-before_install:
-- mkdir -p henrique/env/google/api
-- openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
-  -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
-  -d
+
 
 # travis encrypt-file henrique/env/google/api/henrique-272420-c09c9b3e31ff.json  travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc --com --add
