--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,26 @@
 language: python
-
 python:
-- '3.6.9'
-
+- 3.6.9
 services:
-  - docker
-
-
+- docker
+before_install:
+- openssl aes-256-cbc -K $encrypted_0a44e14a4629_key -iv $encrypted_0a44e14a4629_iv
+  -in travis/henrique/env/docker/env.prod.list.enc -out henrique/env/docker/env.prod.list
+  -d
+- openssl aes-256-cbc -K $encrypted_63311f04c4ca_key -iv $encrypted_63311f04c4ca_iv
+  -in travis/henrique/env/docker/env.dev.list.enc -out henrique/env/docker/env.dev.list
+  -d
+- openssl aes-256-cbc -K $encrypted_5a966adea0fa_key -iv $encrypted_5a966adea0fa_iv
+  -in travis/henrique/env/docker/env.local.list.enc -out henrique/env/docker/env.local.list
+  -d
 install:
 - pip install -U -r henrique/requirements.txt
-
 after_install:
-- scripts/deploy/compile-all.bash
 - scripts/deploy/docker/build.bash
-
 script:
 - openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
   -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
   -d
 - ENV=dev scripts/deploy/docker/test.bash
-
 notifications:
   slack: foxytrixy:HZwjgEulu0umNtMJ1E9UhGPA#henrique
-
-
-
-# travis encrypt-file henrique/env/google/api/henrique-272420-c09c9b3e31ff.json  travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc --com --add
