--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 services:
 - docker
 before_install:
+- mkdir -p henrique/env/docker
 - openssl aes-256-cbc -K $encrypted_0a44e14a4629_key -iv $encrypted_0a44e14a4629_iv
   -in travis/henrique/env/docker/env.prod.list.enc -out henrique/env/docker/env.prod.list
   -d
@@ -18,6 +19,7 @@ install:
 after_install:
 - scripts/deploy/docker/build.bash
 script:
+- mkdir -p henrique/env/google/api
 - openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
   -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
   -d
