--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
 - openssl aes-256-cbc -K $encrypted_5bf23a7191ec_key -iv $encrypted_5bf23a7191ec_iv
   -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
   -d
+- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - ENV=dev scripts/deploy/docker/test.bash
 notifications:
   slack: foxytrixy:HZwjgEulu0umNtMJ1E9UhGPA#henrique
