--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script:
   -in travis/henrique/env/google/api/henrique-272420-c09c9b3e31ff.json.enc -out henrique/env/google/api/henrique-272420-c09c9b3e31ff.json
   -d
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- ENV=dev scripts/deploy/docker/test.bash
+- scripts/deploy/docker/test.bash
 notifications:
   slack: foxytrixy:HZwjgEulu0umNtMJ1E9UhGPA#henrique
